--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/THE-VIP-BOY-OP/VIP-USERBOT",
+  "repository": "https://github.com/Recordu/VIP-USERBOT",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable heroku.",
